--- a/page3.html
+++ b/page3.html
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section content4 cid-rTh2DO6z21" id="content4-23">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section content4 cid-rTh2DO6z21" id="content4-23">
 
     
 
@@ -140,7 +140,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Ztw6CgH2oltYrQAtjmi7FN3fiuPmiQVq8FfWBZgjNL8QjHQRS5Xhr3ii86GuGG/lL5ySZ/+dP1VwUCN0q3FRJWzKZDkYOtVglCQNCm0iSocnCgL2VLdNurBbP27c/E9d">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="c4gciZrWkUDfO+iCcOFqNE8AJvDYAJUyv5OXKAQzFCB7YTqCe9awSLfxwTXZHtZN2wu3PtoGC2CEECkndIzpTtJf53lA6RyFYGbTGpe4/ZJKBWp6fx03FY7zj1QpQpK3">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -173,7 +173,7 @@
     </div>
 </section>
 
-<section class="footer3 cid-rTh2DRCTmK" id="footer3-2a">
+<section class="footer3 cid-rTKyRgOgoy" id="footer3-65">
 
     
 
@@ -191,28 +191,15 @@
                     TUFFYTAIL.COM</p>
             </div>
             <div class="col-md-3 col-sm-4">
-                <p class="mb-4 mbr-fonts-style foot-title display-7">
-                    RECENT NEWS
-                </p>
+                <p class="mb-4 mbr-fonts-style foot-title display-7"></p>
                 <p class="mbr-text mbr-links-column mbr-fonts-style display-7">
                     <a href="http://www.tuffytail.com/policy/about-us" class="text-black">About us</a>
-                    <br><a href="#" class="text-black">Services</a>
-                    <br><a href="#" class="text-black">Selected Work</a>
-                    <br><a href="#" class="text-black">Get In Touch</a>
-                    <br><a href="#" class="text-black">Careers</a>
-                </p>
+                    <br><a href="http://www.tuffytail.com/policy/terms-of-service" class="text-black">Terms</a>
+                    <br>Careers<br><a href="http://www.tuffytail.com/policy/contact-us" class="text-black">C</a>ontact</p>
             </div>
             <div class="col-md-3 col-sm-4">
-                <p class="mb-4 mbr-fonts-style foot-title display-7">
-                    CATEGORIES
-                </p>
-                <p class="mbr-text mbr-fonts-style mbr-links-column display-7">
-                    <a href="#" class="text-black">Business</a>
-                    <br><a href="#" class="text-black">Design</a>
-                    <br><a href="#" class="text-black">Real life</a>
-                    <br><a href="#" class="text-black">Science</a>
-                    <br><a href="#" class="text-black">Tech</a>
-                </p>
+                <p class="mb-4 mbr-fonts-style foot-title display-7"></p>
+                <p class="mbr-text mbr-fonts-style mbr-links-column display-7"><br><br></p>
             </div>
             <div class="col-md-4 col-sm-12">
                 <p class="mb-4 mbr-fonts-style foot-title display-7">
@@ -223,7 +210,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jrPWsvAivG3ahF9K409UcLThyCX9teq6l6OKgn76etKGVDigg4hVgQU+nYlQ65jxUa75mXNfHypZTEu4joS81HGN6bjNz3msqnfyXvS8e3+B0t8BdB/JAuJMOeUmoIFw">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="W6/sGAuCzGK7tqyVA1X4H35dYBP1iNv6YDINWagmHcgZ16eJhRcrsWSLrzcH83jcf33J9e3BaTL/OmoVH+AR7xEX8+wgeGkNZt+RBOPjweYqM5TBtAIqVVGeLxSF1saj">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -231,7 +218,7 @@
                         </div>
                         <div class="dragArea row form-inline justify-content-center">
                             <div class="col-auto form-group " data-for="email">
-                                <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" id="email-footer3-2a">
+                                <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" id="email-footer3-65">
                             </div>
                             <div class="col-auto input-group-btn  m-2">
                                 <button type="submit" class="btn btn-primary m-0 display-4">Subscribe</button>
@@ -251,7 +238,7 @@
             <div class="media-container-row">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2019 Mobirise - All Rights Reserved
+                        © Copyright 2020 Tuffy Tail - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
