--- a/page5.html
+++ b/page5.html
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="mbr-section content4 cid-rTh2FamIDt" id="content4-2l">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section content4 cid-rTh2FamIDt" id="content4-2l">
 
     
 
@@ -139,7 +139,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zLAmP4702lZRlYYS+CHNNUxjX8Dkiw9AG5cR4r3NTwIYYTySmpE6p+oGNUtPE9LBYw1Aex7jTv/ySRbnr8ydFG2GyGF8yvLwmoVMMLPdRq41o9UWQrVOGdzKVFjBGO8P">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LE0Gq32LX+zF3iMU/WyrV2RZIP7pio1zNjpRIsxhtIN9SS6BvLZuNpkccCAu0cS6y01JxS4xu+/ypp1DNK8KlHxEbxcBEGItOsmUWPojwvMwiCn7Z6Ug9NbrUjoNPssX">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -172,7 +172,7 @@
     </div>
 </section>
 
-<section class="footer3 cid-rTh2FciUIb" id="footer3-2s">
+<section class="footer3 cid-rTKz2lhS38" id="footer3-68">
 
     
 
@@ -190,28 +190,15 @@
                     TUFFYTAIL.COM</p>
             </div>
             <div class="col-md-3 col-sm-4">
-                <p class="mb-4 mbr-fonts-style foot-title display-7">
-                    RECENT NEWS
-                </p>
+                <p class="mb-4 mbr-fonts-style foot-title display-7"></p>
                 <p class="mbr-text mbr-links-column mbr-fonts-style display-7">
                     <a href="http://www.tuffytail.com/policy/about-us" class="text-black">About us</a>
-                    <br><a href="#" class="text-black">Services</a>
-                    <br><a href="#" class="text-black">Selected Work</a>
-                    <br><a href="#" class="text-black">Get In Touch</a>
-                    <br><a href="#" class="text-black">Careers</a>
-                </p>
+                    <br><a href="http://www.tuffytail.com/policy/terms-of-service" class="text-black">Terms</a>
+                    <br>Careers<br><a href="http://www.tuffytail.com/policy/contact-us" class="text-black">C</a>ontact</p>
             </div>
             <div class="col-md-3 col-sm-4">
-                <p class="mb-4 mbr-fonts-style foot-title display-7">
-                    CATEGORIES
-                </p>
-                <p class="mbr-text mbr-fonts-style mbr-links-column display-7">
-                    <a href="#" class="text-black">Business</a>
-                    <br><a href="#" class="text-black">Design</a>
-                    <br><a href="#" class="text-black">Real life</a>
-                    <br><a href="#" class="text-black">Science</a>
-                    <br><a href="#" class="text-black">Tech</a>
-                </p>
+                <p class="mb-4 mbr-fonts-style foot-title display-7"></p>
+                <p class="mbr-text mbr-fonts-style mbr-links-column display-7"><br><br></p>
             </div>
             <div class="col-md-4 col-sm-12">
                 <p class="mb-4 mbr-fonts-style foot-title display-7">
@@ -222,7 +209,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xtMvtChY0tCLYklH7KbMfD/vkuU3JnCbpybfMyT5kBs6KkeZMqGM9Ye4FcKwcsgiLngi6rIS+g45QqgMuQQhZAfb1KJSuH5vmNFlg89e3dvRkyHc7f8lnIpbjZZpoAYp">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="seipW0GMjtHlrsZQ+yrzmmnVYiGkHAoVGzehrQcBC2C/LStiHtD/s0h0vTGkRpnRQguaxM2D8//TRqPLz6eaT/o9dNyP6JPCqYRG2TJno2MeHT9udNTN7g8a0Bhcfwa8">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -230,7 +217,7 @@
                         </div>
                         <div class="dragArea row form-inline justify-content-center">
                             <div class="col-auto form-group " data-for="email">
-                                <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" id="email-footer3-2s">
+                                <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" id="email-footer3-68">
                             </div>
                             <div class="col-auto input-group-btn  m-2">
                                 <button type="submit" class="btn btn-primary m-0 display-4">Subscribe</button>
@@ -250,7 +237,7 @@
             <div class="media-container-row">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2019 Mobirise - All Rights Reserved
+                        © Copyright 2020 Tuffy Tail - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
