--- a/page7.html
+++ b/page7.html
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section content4 cid-rTh2FN5irM" id="content4-33">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-section content4 cid-rTh2FN5irM" id="content4-33">
 
     
 
@@ -140,7 +140,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0/gB9Jo3bx0mou0G8y1hK4w/3yfS0rnm7EpfR/xSG1AasJGqm9g0LCEXZjcdbx7F2RHVt+lBzLDLig6hOy4xUdbopN50bYXOyB3kw13ZYX98hCf8kiNyBrBAucaJ7wKF">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ofq9sJD4lgHpZ8J4G9Ez9GvR3aUNRhj3x5ViXv1NT6RNxnMjrvCH/aVRPWDHkb7W1MZ0G45p5UzMMskvvaSnvQyUL5h9GpJdi6IOM0bltr5Vih0Uf28xZ+BQKzTTY5Rl">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -173,7 +173,7 @@
     </div>
 </section>
 
-<section class="footer3 cid-rTh2FOZNDL" id="footer3-3a">
+<section class="footer3 cid-rTKzrHgov8" id="footer3-6a">
 
     
 
@@ -191,28 +191,15 @@
                     TUFFYTAIL.COM</p>
             </div>
             <div class="col-md-3 col-sm-4">
-                <p class="mb-4 mbr-fonts-style foot-title display-7">
-                    RECENT NEWS
-                </p>
+                <p class="mb-4 mbr-fonts-style foot-title display-7"></p>
                 <p class="mbr-text mbr-links-column mbr-fonts-style display-7">
                     <a href="http://www.tuffytail.com/policy/about-us" class="text-black">About us</a>
-                    <br><a href="#" class="text-black">Services</a>
-                    <br><a href="#" class="text-black">Selected Work</a>
-                    <br><a href="#" class="text-black">Get In Touch</a>
-                    <br><a href="#" class="text-black">Careers</a>
-                </p>
+                    <br><a href="http://www.tuffytail.com/policy/terms-of-service" class="text-black">Terms</a>
+                    <br>Careers<br><a href="http://www.tuffytail.com/policy/contact-us" class="text-black">C</a>ontact</p>
             </div>
             <div class="col-md-3 col-sm-4">
-                <p class="mb-4 mbr-fonts-style foot-title display-7">
-                    CATEGORIES
-                </p>
-                <p class="mbr-text mbr-fonts-style mbr-links-column display-7">
-                    <a href="#" class="text-black">Business</a>
-                    <br><a href="#" class="text-black">Design</a>
-                    <br><a href="#" class="text-black">Real life</a>
-                    <br><a href="#" class="text-black">Science</a>
-                    <br><a href="#" class="text-black">Tech</a>
-                </p>
+                <p class="mb-4 mbr-fonts-style foot-title display-7"></p>
+                <p class="mbr-text mbr-fonts-style mbr-links-column display-7"><br><br></p>
             </div>
             <div class="col-md-4 col-sm-12">
                 <p class="mb-4 mbr-fonts-style foot-title display-7">
@@ -223,7 +210,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IAiqwrYSF5gU21g9vY62N0f7bTo4nOdkHwLxvgKQQIVtcx7xwHsBMYKZ0+nxy6rOQwWGATqQKeyGNgtclGFTYskSZFPEart8xjcCYxLDAUOY9nTEBGcbHHw2kycnt42r">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jCugjHTBNUpOdVjqxBWwv8Yp+4h/R9RdHdE/LneQyxxwlALMSd/85GZ2A/OUNGH/jxlREyGmi/ixKUMqm0st7oa8xQbtzuDU0Uql6y1p3ftbiDCDRsagchb/NkoJFjXe">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -231,7 +218,7 @@
                         </div>
                         <div class="dragArea row form-inline justify-content-center">
                             <div class="col-auto form-group " data-for="email">
-                                <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" id="email-footer3-3a">
+                                <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" id="email-footer3-6a">
                             </div>
                             <div class="col-auto input-group-btn  m-2">
                                 <button type="submit" class="btn btn-primary m-0 display-4">Subscribe</button>
@@ -251,7 +238,7 @@
             <div class="media-container-row">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2019 Mobirise - All Rights Reserved
+                        © Copyright 2020 Tuffy Tail - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
