--- a/page8.html
+++ b/page8.html
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="mbr-section content4 cid-rThuSbOEKP" id="content4-3c">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section class="mbr-section content4 cid-rThuSbOEKP" id="content4-3c">
 
     
 
@@ -140,7 +140,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oZX+E5spik6c6En+tkQsoH/PUJH0T+ZfFvfJq8rTRY1vdAgUKxypB3dnyKtuhRHyN8yyyFjCZ4wR597R2ERtpjqfhN42QZ0OJ8db/zJz0mREVonu70ryN9xMVutIqfz4">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kpxg2vV0DPqtv7IKJ9lt+tn4/RpcV7DTAzvF+A2CAucpHJugWlu3SxwRI3VPmFLzoLrEwTjjaTtMdR728HHXFfKH+93w6+NyGfrO9otvTiTJ6shr43IFKzRGoqX0Jm8V">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -173,7 +173,7 @@
     </div>
 </section>
 
-<section class="footer3 cid-rThuSeq3Jr" id="footer3-3j">
+<section class="footer3 cid-rTKyMDssgU" id="footer3-64">
 
     
 
@@ -191,28 +191,15 @@
                     TUFFYTAIL.COM</p>
             </div>
             <div class="col-md-3 col-sm-4">
-                <p class="mb-4 mbr-fonts-style foot-title display-7">
-                    RECENT NEWS
-                </p>
+                <p class="mb-4 mbr-fonts-style foot-title display-7"></p>
                 <p class="mbr-text mbr-links-column mbr-fonts-style display-7">
                     <a href="http://www.tuffytail.com/policy/about-us" class="text-black">About us</a>
-                    <br><a href="#" class="text-black">Services</a>
-                    <br><a href="#" class="text-black">Selected Work</a>
-                    <br><a href="#" class="text-black">Get In Touch</a>
-                    <br><a href="#" class="text-black">Careers</a>
-                </p>
+                    <br><a href="http://www.tuffytail.com/policy/terms-of-service" class="text-black">Terms</a>
+                    <br>Careers<br><a href="http://www.tuffytail.com/policy/contact-us" class="text-black">C</a>ontact</p>
             </div>
             <div class="col-md-3 col-sm-4">
-                <p class="mb-4 mbr-fonts-style foot-title display-7">
-                    CATEGORIES
-                </p>
-                <p class="mbr-text mbr-fonts-style mbr-links-column display-7">
-                    <a href="#" class="text-black">Business</a>
-                    <br><a href="#" class="text-black">Design</a>
-                    <br><a href="#" class="text-black">Real life</a>
-                    <br><a href="#" class="text-black">Science</a>
-                    <br><a href="#" class="text-black">Tech</a>
-                </p>
+                <p class="mb-4 mbr-fonts-style foot-title display-7"></p>
+                <p class="mbr-text mbr-fonts-style mbr-links-column display-7"><br><br></p>
             </div>
             <div class="col-md-4 col-sm-12">
                 <p class="mb-4 mbr-fonts-style foot-title display-7">
@@ -223,7 +210,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="b1He8HVLekYiCA2VWYdSYELymH52TSVKKXK56rr75ozIus1nub+S0zWx8bXH7LmAP5NEFJosb9aBrS+WooFkQaVrj9ZisbC/v7Mi2fmIJKyrXqMSCj2V3FEq+m8cR9ud">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vwOKSYvcm1NP8RemwAQOHpDAmJjcnW8ca3n1ft3Bjuv+5QGRIJm4W191pHJjqHRT2SvLvWN9hhzGuYCQkDsVbec62bGM5ZLTp9fmijEUKwWS8ibGHMJiJ/djxyG/im6p">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -231,7 +218,7 @@
                         </div>
                         <div class="dragArea row form-inline justify-content-center">
                             <div class="col-auto form-group " data-for="email">
-                                <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" id="email-footer3-3j">
+                                <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" id="email-footer3-64">
                             </div>
                             <div class="col-auto input-group-btn  m-2">
                                 <button type="submit" class="btn btn-primary m-0 display-4">Subscribe</button>
@@ -251,7 +238,7 @@
             <div class="media-container-row">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2019 Mobirise - All Rights Reserved
+                        © Copyright 2020 Tuffy Tail - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
