--- a/page9.html
+++ b/page9.html
@@ -45,7 +45,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own website</a></section><section class="mbr-section content4 cid-rThuT4lF3n" id="content4-3l">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="mbr-section content4 cid-rThuT4lF3n" id="content4-3l">
 
     
 
@@ -141,7 +141,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IlwPe9Ca4z+xoBeN1AQZ2Tu/JDvebUOVw0HFlIZEHw09FQR4EEnSE6lnf9JK/YgtrdDul4MUKQ6Uq8pdltxPeFIauadGng5jAvkr1MWM9X75lpdEJ+ZGff2X1VGHMvHB">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="x7JtDH/VBa92hzGmax7jqvjqS2Fr7q1M2k7Mab56VffIl3BhTGZjSo+YokPACu0ltt3rXE/5kfzq0ltr9cOXpXZ01GQYCp+wSFIPOiqECRqz0qA1w1QYGzLTPkGhIBSC">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -174,7 +174,7 @@
     </div>
 </section>
 
-<section class="footer3 cid-rThuT6S6oz" id="footer3-3s">
+<section class="footer3 cid-rTKyEtOgiJ" id="footer3-63">
 
     
 
@@ -192,28 +192,15 @@
                     TUFFYTAIL.COM</p>
             </div>
             <div class="col-md-3 col-sm-4">
-                <p class="mb-4 mbr-fonts-style foot-title display-7">
-                    RECENT NEWS
-                </p>
+                <p class="mb-4 mbr-fonts-style foot-title display-7"></p>
                 <p class="mbr-text mbr-links-column mbr-fonts-style display-7">
                     <a href="http://www.tuffytail.com/policy/about-us" class="text-black">About us</a>
-                    <br><a href="#" class="text-black">Services</a>
-                    <br><a href="#" class="text-black">Selected Work</a>
-                    <br><a href="#" class="text-black">Get In Touch</a>
-                    <br><a href="#" class="text-black">Careers</a>
-                </p>
+                    <br><a href="http://www.tuffytail.com/policy/terms-of-service" class="text-black">Terms</a>
+                    <br>Careers<br><a href="http://www.tuffytail.com/policy/contact-us" class="text-black">C</a>ontact</p>
             </div>
             <div class="col-md-3 col-sm-4">
-                <p class="mb-4 mbr-fonts-style foot-title display-7">
-                    CATEGORIES
-                </p>
-                <p class="mbr-text mbr-fonts-style mbr-links-column display-7">
-                    <a href="#" class="text-black">Business</a>
-                    <br><a href="#" class="text-black">Design</a>
-                    <br><a href="#" class="text-black">Real life</a>
-                    <br><a href="#" class="text-black">Science</a>
-                    <br><a href="#" class="text-black">Tech</a>
-                </p>
+                <p class="mb-4 mbr-fonts-style foot-title display-7"></p>
+                <p class="mbr-text mbr-fonts-style mbr-links-column display-7"><br><br></p>
             </div>
             <div class="col-md-4 col-sm-12">
                 <p class="mb-4 mbr-fonts-style foot-title display-7">
@@ -224,7 +211,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="A/+rdHia7CBiN3bBeeaAgp7lNaPnY55L8yQfAQiFw5+e4Ieofzty2BUb93eJWwzQeQ34B1o0y8Q9nqLZnfL2GOPkNoKp0BpiYfGwosnU3lOTysVThCpAq06gWMVRbD+X">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DUMNAweJKsUMFmUtxKWxRA4+0A/v5JaI6LfpNSOmHajfjDEXYQQ/3Te+AU/oqfVTzOlZsmz2uGF6z7w6nvF+2uCZSFNYaChySLGKWXmEZYzXVLzNXz4Kv/2yN+xB1+IF">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -232,7 +219,7 @@
                         </div>
                         <div class="dragArea row form-inline justify-content-center">
                             <div class="col-auto form-group " data-for="email">
-                                <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" id="email-footer3-3s">
+                                <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" id="email-footer3-63">
                             </div>
                             <div class="col-auto input-group-btn  m-2">
                                 <button type="submit" class="btn btn-primary m-0 display-4">Subscribe</button>
@@ -252,7 +239,7 @@
             <div class="media-container-row">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2019 Mobirise - All Rights Reserved
+                        © Copyright 2020 Tuffy Tail - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
